--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5 {
 /* Img-pag */
 .img-pag {
     color: #ffffff;
-    background-image: url(img/contacto.jpg);
+    background-image: url(../img/contacto.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
